@startuml
'https://plantuml.com/class-diagram

interface IApplicationState

class Application
class Game
class Menu

Application --* IApplicationState

Game --> Application
Menu --> Application

interface IApplicationState {
    + Update(application: Application, delta_time: float)
    + Render(application: Application)
    + UpdateEvents(application: Application)
}

class Application {
{field}...
 - stаte: IApplicationState
 {method}...
 + SetState(stаte: IApplicationState)

}

class Game implements IApplicationState {
{field} ...
{method} ...
    + Update(application: Application, delta_time: float)
    + Render(application: Application)
    + UpdateEvents(application: Application)
}

class Menu implements IApplicationState {
    {field} ...
    {method} ...
    + Update(application: Application, delta_time: float)
    + Render(application: Application)
    + UpdateEvents(application: Application)
}
@enduml